--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,7 @@
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.5",
-    "react-skeleton-css": "^1.1.0"
+    "styled-components": "^3.4.5"
   },
   "scripts": {
     "start": "react-scripts start",
